# direct-marketing-optimization

./: .dockerignore  .env_example  .gitignore  AGENTS.md  README.md  docker-compose.yml  main.py  pyproject.toml  streamlit_app.py
app/: utils.py
app/pages/: 1_introduction.py  2_filter.py  3_propensity.py  4_revenue.py  5_evaluation.py
conf/: config.yaml  logging.yaml
conf/propensity_model/: GradientBoosting.yaml  LogisticRegression.yaml  RandomForest.yaml  gradient_boosting.yaml  logistic_regression.yaml  model_sweep.yaml  random_forest.yaml
conf/revenue_model/: GradientBoosting.yaml  LinearRegression.yaml  RandomForest.yaml  model_sweep.yaml  (+3 more)
docker/: direct-marketing.Dockerfile  docker-compose.yml
docs/: Makefile  executive_summary.md  high_propensity_list.md  results.md
notebooks/: cc_analysis.ipynb  cl_analysis.ipynb  general_analysis.ipynb  mf_analysis.ipynb
pages/: 0_Methodology.py  0_summary.py  0_train.py  1_Filter.py  1_Summary.py  1_filter.py  2_Filter.py  2_Propensity.py  2_propensity.py  3_Propensity.py  3_Revenue.py  3_revenue.py  4_Evaluation.py  4_Revenue.py  4_evaluation.py  5_Client_list.py  5_client_list.py  6_Evaluation.py
scripts/: optuna_mlflow_logging.py
src/: config_loader.py  config_models.py  dataloader.py  evaluator.py  inference.py  logging.py  metrics.py  mlflow_utils.py  model_evaluator.py  model_factory.py  model_loader.py  optimizer.py  preprocessor.py  streamlit_utils.py  trainer.py
tests/: test_dataloader.py  test_evaluator_optimizer.py  test_inference.py  test_model_factory.py  test_preprocessor.py  test_trainer.py
(+85 files in other folders)
