[project]
name = "direct-marketing-optimization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ace-tools>=0.0",
    "hydra-core==1.3.2",
    "hydra-optuna-sweeper==1.3.0.dev0",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "lazypredict>=0.2.16",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "omegaconf>=2.3.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "scikit-learn>=1.7.0",
    "scipy>=1.16.0",
    "seaborn>=0.13.2",
]
