[project]
name = "direct-marketing-optimization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ace-tools>=0.0",
    "cvxpy>=1.6.6",
    "ecos>=2.0.14",
    "hydra-core==1.3.2",
    "hydra-optuna-sweeper==1.3.0.dev0",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "lazypredict>=0.2.16",
    "matplotlib>=3.10.3",
    "mlflow>=3.1.1",
    "numpy>=2.3.1",
    "omegaconf>=2.3.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "pydantic>=2.11.7",
    "pytest>=8.4.1",
    "scikit-learn>=1.7.0",
    "scipy==1.15.3",
    "seaborn>=0.13.2",
    "statsmodels==0.14.4",
]
